백테스트 수정

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -17,7 +17,21 @@
   <script src="https://unpkg.com/tiptap-vuetify"></script>
   <script src="https://apis.google.com/js/api:client.js"></script>
   <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
   <script src="https://unpkg.com/lightweight-charts/dist/lightweight-charts.standalone.production.js"></script>
+  <style>
+    *{
+      font-family: 'NEXON Lv1 Gothic OTF'; 
+    } 
+
+    @font-face {
+      font-family: 'NEXON Lv1 Gothic OTF';
+      src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/NEXON Lv1 Gothic OTF.woff') format('woff');
+      font-weight: normal;
+      font-style: normal;
+  }
+  </style>
+
 </head>
 
 <body style="background-color: #171b23;">
